# jira-issues-dashboard

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  frequency_of_obs_tickets.ipynb  jira_app.py  jira_dashboard.py  pyproject.toml  requirement.txt  requirements.txt  run_dashboard.py  setup.cfg  streamlit_jira_app.py
jira_app/: __init__.py  app.py  columns.yaml
jira_app/analytics/: __init__.py
jira_app/analytics/aggregations/: __init__.py  assignee.py  obs.py
jira_app/analytics/metrics/: __init__.py  activity.py  aging.py  binning.py  derived.py  status_flow.py
jira_app/analytics/persona/: __init__.py  metrics.py
jira_app/analytics/segments/: __init__.py  filters.py
jira_app/core/: column_config.py  config.py  jira_client.py  mappers.py  models.py  service.py  stale.py  status.py
jira_app/features/: __init__.py
jira_app/features/activity_overview/: __init__.py  context.py
jira_app/features/personal_view/: __init__.py  context.py  filters.py
jira_app/pages/: activity_overview.py  assignees.py  debug.py  persona_insights.py  personal_view.py  reporter.py  setup.py  stale.py
jira_app/visual/: charts.py  column_metadata.py  leaderboard.py  metric_tabs.py  progress.py  tables.py  wordcloud.py
modules/: detailed_tickets.py
tests/: conftest.py  test_activity_overview_page_import.py  test_aggregations.py  test_aging_activity_obs.py  test_assignees_page.py  test_charts.py  test_column_config.py  test_dashboard_context.py  test_personal_view.py  test_priority_mapping.py  test_segments.py  test_service_enrich.py
